# raylib-trenchbroom-c

./: .gitignore  CMakeLists.txt  GameConfig.cfg  README.md  build.bat  build.sh  buildmac.sh  gamedata.fgd
gamedata/: LICENCE
gamedata/models/arms_newpistol/: arms_newpistol.blend  arms_newpistol.blend1  arms_newpistol.glb
gamedata/models/monster_shotgunner/: monster_shotgunner.blend  monster_shotgunner.blend1  monster_shotgunner.glb  monster_shotgunner1.glb
maps/: level1.map  test.map
maps/autosave/: test.1.map  test.2.map  test.3.map  test.4.map  test.5.map
server/: examples.txt  main.c  server.c  server_properties.c
shaders/glsl100/: unlit.fs
shaders/glsl120/: unlit.fs
shaders/glsl330/: lighting.fs  shading.fs  shading.vs  unlit.fs
src/: main.c
src/enemys/: enemy_shotgunner.c
src/game/: weapons.c
src/gameloop/: cleanup.c  draw.c  draw_gui.c  draw_viewmodel.c  gameloop.c  init.c  input.c  update.c
src/gameobjects/: collisionbox.c  enemy.c  entity.c  gameobject.c  player.c
src/headers/: anims.h  brush.h  brushface.h  brushtopolygon.h  camera.h  cleanup.h  collisionbox.h  collisionpolygon.h  collisiontriangle.h  defs.h  draw_gui.h  draw_viewmodel.h  enemy.h  enemy_shotgunner.h  entity.h  event.h  floatingwindow.h  frustum.h  gameloop.h  gameobject.h  geometry.h  global.h  input.h  lights.h  map.h  plane.h  player.h  polygon.h  texturemanager.h  utils.h  weapons.h
src/lib/raylib/include/: raylib.h  rcamera.h  rlights.h
src/map/: brushface.c  brushtopolygon.c  entity.c  map.c
src/menus/: m_options.c
src/skyelib/: brush.c  camera.c  client.c  collisionbox.c  console.c  enet.h  floatingwindow.c  frustum.c  gameobject.c  lights.c  lights.h  map.c  map.h  skyelib.c  skyelib.h  smodel.c  stats.c  texturemanager.c  viewmodel.c
src/system/: camera.c  event.c  global.c  lights.c  texturemanager.c  utils.c
styles/: style_skye.rgs
